# dltransclass

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  PUSH_TO_GITHUB.sh  README.md  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
configs/baselines/: bert_concat.yaml
configs/datasets/: dataset_registry.yaml
configs/experiments/: library_sci_meta.yaml  udc_oldbooks.yaml
docs/: architecture.md  datasets.md
scripts/: error_analysis.py  evaluate.py  reproduce_ablation.sh  reproduce_main_results.sh  reproduce_sensitivity.sh  reproduce_stability.sh  train.py
src/dltransclass/: __init__.py
src/dltransclass/baselines/: __init__.py  bert_concat.py
src/dltransclass/data/: __init__.py  datasets.py  missingness.py
src/dltransclass/models/: __init__.py  barycenter.py  dltransclass.py  field_encoder.py
src/dltransclass/training/: __init__.py  surrogate.py  trainer.py
src/dltransclass/utils/: __init__.py  metrics.py  seed.py
src/dltransclass/visualization/: __init__.py  field_attribution.py
tests/: test_barycenter.py  test_missingness.py  test_surrogate.py
