[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dltransclass"
version = "1.0.0"
description = "Metadata-Aware Transformer Classification for Digital Libraries with Wasserstein Field Fusion"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
    { name = "Xiaorui Ma", email = "Cy_Carmen@163.com" },
    { name = "Zhengyu Zeng", email = "51797998@qq.com" },
]
keywords = [
    "digital libraries",
    "text classification",
    "transformer",
    "optimal transport",
    "wasserstein",
    "metadata fusion",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.2.0,<2.6",
    "transformers>=4.41,<4.50",
    "tokenizers>=0.19",
    "numpy>=1.26,<3.0",
    "scipy>=1.11",
    "scikit-learn>=1.4",
    "pandas>=2.1",
    "datasets>=2.18",
    "PyYAML>=6.0",
    "tqdm>=4.66",
    "POT>=0.9",
    "hydra-core>=1.3",
    "omegaconf>=2.3",
]

[project.optional-dependencies]
viz = [
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "umap-learn>=0.5",
    "plotly>=5.20",
]
log = [
    "tensorboard>=2.16",
    "wandb>=0.17",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "black>=24.4",
    "mypy>=1.10",
    "pre-commit>=3.7",
    "matplotlib>=3.8",
    "seaborn>=0.13",
]

[project.urls]
Homepage = "https://github.com/vectorlab5/dltransclass"
Repository = "https://github.com/vectorlab5/dltransclass"
Issues = "https://github.com/vectorlab5/dltransclass/issues"

[project.scripts]
dlt-train = "dltransclass.scripts.train:main"
dlt-evaluate = "dltransclass.scripts.evaluate:main"
dlt-ablation = "dltransclass.scripts.ablation:main"
dlt-error-analysis = "dltransclass.scripts.error_analysis:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
dltransclass = ["py.typed"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "gpu: marks tests requiring a CUDA GPU",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
